# Pruebas

./: Machote.txt
directoryKirbi/: test.conf
directoryKirbi/input/: IngestaLocal .csv
directoryKirbi/inputschemas/: Schema.json
directoryKirbi/output/: .part-00000-a3beeae1-c769-4853-abc2-1704ff302a95-c000.avro.crc  part-00000-a3beeae1-c769-4853-abc2-1704ff302a95-c000.avro
hklsg_skynet_onboarding_exercise/: Jenkinsfile  README.md  jenkins-config.json  pom.xml
hklsg_skynet_onboarding_exercise/fdev/src/main/resources/kirby/fdev/tfdevshoes/master/: tfdevshoes.inc.conf  tfdevshoes.inc.feature  tfdevshoes.inc.json  tfdevshoes.input.schema  tfdevshoes.output.schema
hklsg_skynet_onboarding_exercise/fdev/src/main/resources/kirby/fdev/tfdevshoes/raw/: tfdevshoes.inc.conf  tfdevshoes.inc.feature  tfdevshoes.inc.json
hklsg_skynet_onboarding_exercise/runConfigurations/: SkynetCli___deploy.xml  SkynetCli___go_to.xml  SkynetCli___init.xml  SkynetCli___run_job.xml  SkynetCli___run_kirby.xml
projectpyspark2/: .coveragerc  .env.required  .gitignore  .pylls  .runtime.yml  CONTRIBUTING.md  Dockerfile  Jenkinsfile  README.md  jenkins-config.json  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  tox.ini  worker.py
projectpyspark2/docs/: conf.py  index.rst
projectpyspark2/docs/overview/: index.md
projectpyspark2/projectpyspark2/: __init__.py  app.py
projectpyspark2/resources/: file.txt  job.json  params.conf
projectpyspark2/tests/: test_app.py
