[bumpversion]
current_version = 0.1.0-SNAPSHOT
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<release>\w+)\.(?P<build>\d+))?
serialize ={major}.{minor}.{patch}
commit = True
tag = False

[metadata]
description-file =
    README.md

[bumpversion:file:projectpyspark2/__init__.py]

[bumpversion:file:docs/conf.py]

[bumpversion:file:.pylls]

[bumpversion:file:Makefile]

[flake8]
exclude = build,.git,.tox
max-line-length = 119

[tool:pytest]
norecursedirs = venv .tox
python_paths = projectpyspark2
